--- a/package.json
+++ b/package.json
@@ -114,7 +114,12 @@
           "rules": {
             "react/jsx-no-literals": "off",
             "prefer-exponentiation-operator": "off",
-            "@typescript-eslint/no-explicit-any": ["warn", { "fixToUnknown": false }]
+            "@typescript-eslint/no-explicit-any": [
+              "warn",
+              {
+                "fixToUnknown": false
+              }
+            ]
           }
         }
       ]
